[package]
name = "pow-rust"
version = "0.1.0"
authors = ["Martyn Janes <martyn@obany.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }